# FastVision.ai

./: README.md  cornelia_feedback_presentation2.md
Modeling/: 3DCNN_0727.ipynb  Ensemble.py  fastvision.ipynb  train.ipynb  train.py
Modeling/Additional Model Architechtures explored/: 3DCNN_7_18_capstone-2.ipynb  3DCNN_capstone.ipynb
Modeling/Final 2D CNN Model/: 2DCNN_Final.ipynb
Modeling/Final 3D CNN Model/: 3DCNN_Final.ipynb
Modeling/Lung_segmetation_UNet/: Lung_Seg_Pipeline.ipynb
Modeling/resources/: train.py
Modeling/sagemaker/: 1.3.6.1.4.1.14519.5.2.1.6279.6001.100530488926682752765845212286.mhd  metadata.csv  metadata_test.csv  test.csv  train-dev.ipynb  train.csv  val.csv
Modeling/sagemaker/.ipynb_checkpoints/: train-dev-checkpoint.ipynb
Modeling/sagemaker/tf/: fastvision.ipynb
Modeling/sagemaker/tf/.ipynb_checkpoints/: fastvision-checkpoint.ipynb
Modeling/sagemaker/tf/code/: requirements.txt  train.py
Modeling/sagemaker/tf/code/.ipynb_checkpoints/: model-checkpoint.py  train-checkpoint.py  utils-checkpoint.py
Modeling/sagemaker/torch/: fastvision.ipynb  train-dev.ipynb
Modeling/sagemaker/torch/.ipynb_checkpoints/: fastvision-checkpoint.ipynb  train-dev-checkpoint.ipynb
Modeling/sagemaker/torch/resources/: CTDataset.py  train.py
Segmentation/: 2dCNNSegment.ipynb  User_upload_segment.ipynb
Segmentation/util/: disk.py
Streamlit/: Dockerfile  Dockerfile.orig  app.py  app_2.py  app_demo.py  pyproject.toml  requirements.txt  run-local.sh  streamlit_theme_config.toml
Streamlit/model/: Model.py
frontend/: index.html
(+3 files in other folders)
