[tool.poetry]
name = "Fastvision"
version = "0.1.0"
description = "Fastvision.ai"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.11"
streamlit = "^1.23.1"
Pillow = "^9.5.0"
opencv-python = "*"
numpy = "^1.24.3"
pandas = "^2.0.2"
torch = "^2.0.1"
SimpleITK = "^2.2.1"
matplotlib = "^3.7.2"
pydicom = "^2.4.2"
imageio = "^2.31.1"
boto3 = "^1.28.10"
lungmask = "^0.2.16"
fill-voids = "^2"
setuptools = "^68.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
